it-kamasutra-92-lessons

--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     ]
   },
   "jest": {
-    "transformIgnorePatterns": ["node_modules/(?!axios)/"]
+    "transformIgnorePatterns": [
+      "node_modules/(?!axios)/"
+    ]
   },
   "browserslist": {
     "production": [
@@ -44,5 +46,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-test-render": "^1.1.2",
+    "react-test-renderer": "^18.2.0"
   }
 }
