it-kamasutra-95-lessons

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://kkandidov.github.io/it-kam/",
+  "homepage": "https://kkandidov.github.io/it-kam",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
